--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="draw a text using javascript">
-        <title>An interactive whiteboard</title>
+        <!-- Primary Meta Tags -->
+        <title>An interactive whiteboard - jorgelga2707</title>
+        <meta name="title" content="An interactive whiteboard - jorgelga2707">
+        <meta name="description" content="Draw using the mouse, i create this project using Javascript, HTML and CSS, visit my repository jorgelga2707">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://canvas-projects-lac.vercel.app/">
+        <meta property="og:title" content="An interactive whiteboard - jorgelga2707">
+        <meta property="og:description" content="Draw using the mouse, i create this project using Javascript, HTML and CSS, visit my repository jorgelga2707">
+        <meta property="og:image" content="https://i.postimg.cc/QCmPCKDH/interactive-whiteboard.png">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://canvas-projects-lac.vercel.app/">
+        <meta property="twitter:title" content="An interactive whiteboard - jorgelga2707">
+        <meta property="twitter:description" content="Draw using the mouse, i create this project using Javascript, HTML and CSS, visit my repository jorgelga2707">
+        <meta property="twitter:image" content="https://i.postimg.cc/QCmPCKDH/interactive-whiteboard.png">
         <link rel="stylesheet" href="./CSS/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
